# rag-improvements

./: .gitignore  README.md  main.py  pyproject.toml
models/: base.py  baseline.py  improved.py  utils.py
scripts/: evaluate.py  query.py
tests/: test_eval_script.py  test_models.py  test_query_script.py
utils/: logger.py
